// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaParseValidation(options, schema) recursive list 1`] = `
Object {
  "objectPlain": Object {
    "message": "Value must be a plain object",
  },
  "objectProperties": Object {
    "properties": Object {
      "list_of_addresses": Object {
        "array": Object {
          "message": "Value must be an array",
        },
        "arrayItems": Object {
          "validation": Object {
            "objectPlain": Object {
              "message": "Value must be a plain object",
            },
            "objectProperties": Object {
              "properties": Object {
                "comments": Object {
                  "array": Object {
                    "message": "Value must be an array",
                  },
                  "arrayItems": Object {
                    "validation": Object {
                      "objectPlain": Object {
                        "message": "Value must be a plain object",
                      },
                      "objectProperties": Object {
                        "properties": Object {
                          "author": Object {
                            "notNull": Object {
                              "message": "Value is required",
                            },
                            "notUndefined": Object {
                              "message": "Value is required",
                            },
                          },
                          "contents": Object {
                            "notNull": Object {
                              "message": "Value is required",
                            },
                            "notUndefined": Object {
                              "message": "Value is required",
                            },
                          },
                        },
                      },
                    },
                  },
                  "arrayMaxLength": Object {
                    "length": 10,
                    "message": "At most 10 comments per address",
                  },
                },
                "line_1": Object {
                  "notNull": Object {
                    "message": "Value is required",
                  },
                  "notUndefined": Object {
                    "message": "Value is required",
                  },
                  "stringMinLength": Object {
                    "length": 10,
                    "message": "Line 1 at least 10",
                  },
                },
                "line_2": Object {
                  "notNull": Object {
                    "message": "Value is required",
                  },
                  "notUndefined": Object {
                    "message": "Value is required",
                  },
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`schemaParseValidation(options, schema) recursive map 1`] = `
Object {
  "objectPlain": Object {
    "message": "must be a plain object",
  },
  "objectProperties": Object {
    "properties": Object {
      "description": Object {
        "notNull": Object {
          "message": "Value is required",
        },
        "notUndefined": Object {
          "message": "Value is required",
        },
      },
      "place": Object {
        "objectPlain": Object {
          "message": "Value must be a plain object",
        },
        "objectProperties": Object {
          "properties": Object {
            "address": Object {
              "notNull": Object {
                "message": "Value is required",
              },
              "notUndefined": Object {
                "message": "Value is required",
              },
              "objectPlain": Object {
                "message": "Value must be a plain object",
              },
              "objectProperties": Object {
                "properties": Object {
                  "line_1": Object {
                    "stringMaxLength": Object {
                      "length": 500,
                    },
                    "stringMinLength": Object {
                      "length": 10,
                    },
                  },
                },
              },
            },
            "name": Object {
              "notNull": Object {
                "message": "Value is required",
              },
              "notUndefined": Object {
                "message": "Value is required",
              },
            },
          },
        },
      },
      "title": Object {
        "notNull": Object {
          "message": "Value is required",
        },
        "notUndefined": Object {
          "message": "Value is required",
        },
      },
    },
  },
}
`;
